# 6700-assignment1-problem4

./: README.md  model.pkl  out.json  pyproject.toml  visualize.py
.github/workflows/: simple.yml
docs/: make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/iris/: index.doctree
docs/_build/doctrees/autoapi/iris/__main__/: index.doctree
docs/_build/doctrees/autoapi/iris/inference/: index.doctree
docs/_build/doctrees/autoapi/iris/train/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/iris/: inference.html  train.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/iris/: index.rst.txt
docs/_build/html/_sources/autoapi/iris/__main__/: index.rst.txt
docs/_build/html/_sources/autoapi/iris/inference/: index.rst.txt
docs/_build/html/_sources/autoapi/iris/train/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/iris/: index.html
docs/_build/html/autoapi/iris/__main__/: index.html
docs/_build/html/autoapi/iris/inference/: index.html
docs/_build/html/autoapi/iris/train/: index.html
docs/source/: conf.py
iris/: inference.py  train.py
tests/: train_test.py
tests/data/: unit_test.json
