[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["JaeHoBahng <jaeho127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.1.1", python = "^3.11"}
sphinx-autoapi = "^3.3.1"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
